--- a/home.css
+++ b/home.css
@@ -1,44 +1,80 @@
 body {
     background-color: #00204A;
     color: #fff;
-    font-family: "Lexend", serif;
-}
-
-.container-fluid {
-    margin-left: 50px;
-    margin-right: 50px;
+    font-family: "Gabarito", serif;
 }
 
 .navbar {
-    font-family: "Gabarito", serif;
     background-color: #00204A;
 }
 
 .navbar-toggler {
-    border: 4px solid black; /* Atur ketebalan dan warna border */
-    border-radius: 5px; /* Atur sudut melengkung jika diperlukan */
+    border: 4px solid #fff;
+    border-radius: 5px;
 }
 
 .navbar-toggler:hover {
-    border-color: black; /* Warna border saat hover */
+    border-color: #fff;
 }
 
-
-.navbar-brand, .navbar-brand:hover{
+.navbar-brand, .navbar-brand:hover, .navbar-brand:active{
     font-family: "Lexend", serif;
     font-weight: bold;
     font-size: 40px;
     color: #fff;
 }
 
+.nav-item {
+    position: relative;
+}
+
 .nav-link {
+    font-size: 20px;
+    color: #fff;
+    padding: 20px;
+}
+
+.nav-link:hover, .nav-link:focus {
     font-size: 20px;
     color: #fff;
 }
 
-.nav-link:hover {
-    font-size: 20px;
-    color: #fff;
+.mega-menu-wrapper {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    display: none;
+    position: absolute;
+    width: 1200px;
+    top: 100%;
+    transform: translateX(-50%);
+}
+
+.nav-item:hover .mega-menu-wrapper, .mega-menu-wrapper:hover{
+    display: block;
+}
+
+.mega-menu-wrapper .item-dropdown {
+    color: #00204A;
+}
+
+.mega-menu-wrapper .item-dropdown a {
+    color: #00204A;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.mega-menu-wrapper .item-dropdown p {
+    font-size: 15px;
+    text-align: justify;
+}
+
+.item-dropdown a:hover{
+    text-decoration: underline;
+}
+
+.item-dropdown a:hover + p{
+    text-decoration: underline;
 }
 
 .btn-primary, .btn-primary:hover{
@@ -47,16 +83,21 @@ body {
     color: #00204A;   
 }
 
+section {
+    padding-top: 86px;
+    padding-bottom: 30px;
+}
+
 .carousel-item img {
-    height: 300px; /* Sesuaikan tinggi sesuai kebutuhan */
-    object-fit: cover; /* Memastikan gambar tetap proporsional */
+    height: 300px;
+    object-fit: cover;
 }
 
 .card-img-top {
-    width: 100%; /* Mengatur lebar gambar agar memenuhi lebar kartu */
-    height: auto; /* Memastikan proporsi gambar tetap */
-    max-height: 230px; /* Mengatur tinggi maksimum gambar */
-    object-fit: cover; /* Memastikan gambar tidak terdistorsi */
+    width: 100%;
+    height: auto;
+    max-height: 230px; 
+    object-fit: cover; 
 }
 
 .card-title {
@@ -79,57 +120,33 @@ body {
     color: white;
 }
 
-section {
-    margin-bottom: 30px;
-}
-
 .content {
     margin-top: 35px;
 }
 
 footer {
-    padding: 20px;
-    border-top: 1px solid grey;
+    padding-top: 30px;
+    background-color: #001F3F;
 }
 
-/* menu solusi */
-.mega-menu {
-    position: absolute; /* Memastikan menu melayang di atas konten lainnya */
-    background-color: white;
-    border: 1px solid #ccc;
-    z-index: 10;
-    width: 1200px; /* Atur lebar mega-menu */
-    height: 300px;
-    display: none; /* Sembunyikan mega-menu secara default */
-    padding: 10px; /* Tambahkan padding di sekitar konten */
+footer .row {
+    padding-bottom: 30px;
+}
+
+footer .copyright {
+    border-top: 1px solid #fff;
+}
+
+footer small {
+    color: #adb5bd;
+}
+
+footer .about_me p {
+    text-align: justify;
+}
+
+footer i {
+    color: #fff;
     font-size: 20px;
-    left: 50%; /* Posisi dari kiri */
-    transform: translateX(-50%); /* Menggeser untuk memusatkan */
-    font-family: "lexend", serif;
-    border-radius: 10px;
-}
-
-.nav-item:hover .mega-menu {
-    display: block; /* Tampilkan mega-menu saat hover */
-}
-
-.nav-item {
-    position: relative; /* Untuk mengatur posisi mega-menu relatif terhadap menu item */
-}
-
-.mega-menu-content {
-    display: grid; /* Menggunakan grid untuk layout */
-    grid-template-columns: repeat(3, 1fr); /* Membagi menjadi 3 kolom */
-    gap: 40px; /* Jarak antar item */
-}
-
-.mega-menu-content div {
-    text-align: left; /* Rata tengah untuk setiap item */
-    color: #00204A;
-}
-
-.mega-menu-content p {
-    text-align: left; /* Rata tengah untuk setiap item */
-    color: grey;
-    font-size: 15px;
+    margin-right: 10px;
 }
