--- a/PEMBUATANDOKUM.css
+++ b/PEMBUATANDOKUM.css
@@ -4,44 +4,29 @@ body {
     font-family: "Lexend", serif;
 }
 
-body {
-    background-color: #00204A;
-    color: #fff;
-    font-family: "Lexend", serif;
-}
-
-.container-fluid {
-    margin-left: 50px;
-    margin-right: 50px;
-}
 
 .navbar {
-    font-family: "Gabarito", serif;
     background-color: #00204A;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
 }
 
+.nav-item {
+    position: relative;
+}
 
 .nav-link {
+    font-size: 20px;
     color: #fff;
-    transform: translateX(50%);
+    padding: 20px;
 }
 
 .navbar-toggler {
-    border: 4px solid black; /* Atur ketebalan dan warna border */
+    border: 4px solid white; /* Atur ketebalan dan warna border */
     border-radius: 5px; /* Atur sudut melengkung jika diperlukan */
 }
 
-.navbar-toggler:hover {
-    border-color: black; /* Warna border saat hover */
-}
 
 
-.navbar-brand, .navbar-brand:hover{
+.navbar-brand, .navbar-brand:hover, .navbar-brand:active{
     font-family: "Lexend", serif;
     font-weight: bold;
     font-size: 40px;
@@ -49,6 +34,65 @@ body {
 }
 
 
+
+.nav-item {
+    position: relative;
+}
+
+.nav-link {
+    font-size: 20px;
+    color: #fff;
+    padding: 20px;
+}
+
+.nav-link:hover, .nav-link:focus {
+    font-size: 20px;
+    color: #fff;
+}
+
+.mega-menu-wrapper {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    display: none;
+    position: absolute;
+    width: 1100px;
+    top: 100%;
+    transform: translateX(-50%);
+}
+
+.nav-item:hover .mega-menu-wrapper, .mega-menu-wrapper:hover{
+    display: block;
+}
+
+.mega-menu-wrapper .item-dropdown {
+    color: #00204A;
+}
+
+.mega-menu-wrapper .item-dropdown a {
+    color: #00204A;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.mega-menu-wrapper .item-dropdown p {
+    font-size: 15px;
+    text-align: justify;
+}
+
+.item-dropdown a:hover{
+    text-decoration: underline;
+}
+
+.item-dropdown a:hover + p{
+    text-decoration: underline;
+}
+
+.btn-primary, .btn-primary:hover{
+    font-size: 20px;
+    background-color: #fff;
+    color: #00204A;   
+}
 
 /* judul */
 .container {
@@ -80,10 +124,11 @@ body {
 
 
 /* button lihat dokumen */
-.btn {
+.btn1 {
     margin-top: 40px;
     background-color: orange;
     margin-bottom: 30px;
+    border-radius: 5px;
 }
 
 /* isi dokumen */
@@ -110,6 +155,7 @@ body {
     color: #fff;
     font-family: "Lexend", serif;
 }
+
 
 .card-text {
     font-weight: 200;
