Menambahkan Halaman Home dan Fitur Artikel

--- a/public/css/components/navigation.css
+++ b/public/css/components/navigation.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Lexend:wght@100..900&display=swap");
 body {
-    margin: 81.2px 0px 0px 0px;
-    padding: 0;
+    padding: 86px 0px 0px 0px;
+    margin: 0;
     background-color: #fdf7f4;
     color: #00204a;
     font-family: "Gabarito", serif;
