Meanmbahkan routing dari fitur forum dan dokumen

--- a/public/css/consultant/consultant_detail.css
+++ b/public/css/consultant/consultant_detail.css
@@ -19,3 +19,9 @@
 .card-detail .bi {
     color: #004ab3;
 }
+
+.card-layanan .nav-link,
+.card-layanan .nav-link.active {
+    padding: 0;
+    color: #00204a;
+}
