--- a/public/css/components/dashboard.css
+++ b/public/css/components/dashboard.css
@@ -2,43 +2,49 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body {
-    padding: 1rem;
+    padding: 0;
     margin: 0;
     background-color: #fdf7f4;
     color: #00204a;
     font-family: "Gabarito", serif;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-}
-
-.brand {
-    font-family: "Lexend", serif;
-    font-weight: bold;
-    font-size: 40px;
-    color: #fff;
 }
 
 .sidebar {
     background-color: #00204a;
     color: #fff;
-    padding: 1rem;
-    border-radius: 8px;
-    width: 20%;
+    width: 15%;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 
-.btn-nav.active {
+.navbar-brand {
+    font-family: "Lexend", serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.nav-link.active {
+    color: #00204a !important;
     background-color: #fff;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.nav-link {
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.nav-link:hover {
+    padding: 8px;
     color: #00204a;
+    background-color: #fff;
+    border-radius: 8px;
 }
 
-.btn-nav {
-    color: #fff;
-}
-
-.btn-nav:hover {
-    border: 1px solid #fff;
+main {
+    width: 85%;
 }
